<resources>
    <string name="app_name">Fynotej</string>

    <!--Description Texts-->
    <string name="first_description_text">Somos una empresa dedicada a la manufactura de no-tejidos, hilo de acrílico y </string>
    <string name="first_description_bold_text">honeycomb de polipropileno.</string>
    <string name="second_description_text">Nos distinguimos por trabajar bajo un esquema basado en tres pilares esenciales:</string>
    <string name="first_description_element">Vanguardia Tecnológica</string>
    <string name="second_description_element">Servicio</string>
    <string name="third_description_element">Calidad</string>
    <string name="third_description_text">Tenemos un compromiso constante con el medio ambiente. Fabricamos la mayor\n parte de nuestros productos a partir de materiales reciclados.\nSomos una Empresa Socialmente Responsable.</string>
    <string name="click_here_to_continue">Toca para continuar...</string>
    <string name="fynocore_pp_title">Fynocore PP</string>
    <string name="fynocore_ppsb_title">Fynocore PPSB</string>
    <string name="decopanel_description_first">Paneles acústicos y decorativos fabricados con fibras recicladas PET, ideales para proyectos de diseño, arquitectura e interiorismo que impliquen </string>
    <string name="decopanel_description_first_bold">creatividad, estética y funcionalidad.</string>
    <string name="decopanel_description_second">\n\nDecopanel ®, es un panel versátil que  permite a los creativos del interiorismo diseñar espacios que brinden modernidad, confort, acústica y versatilidad.\n\n</string>
    <string name="decopanel_description_second_bold">Producto 100% Mexicano!  14 colores disponibles.</string>
    <string name="cimbracore_description_first_bold">UNA NUEVA ALTERNATIVA PARA CIMBRA APARENTE.</string>
    <string name="cimbracore_description_text">\n\nHemos desarrollado la cimbra ideal para las obras que requieran acabados aparentes, mayor cantidad de usos, menos merma por humedad, y sin uso de desmoldante o procesos de curado.</string>


    <string name="fynocore_pp_description"><![CDATA[Paneles con núcleo honeycomb, laminado con 2 caras de polipropileno natural.  Este panel en su composición puede incluir aditivos UV con garantía mínimo de 2 años y Retardante a la Flama V2 y V0. <br><br><b>HERRAMIENTAS DE CORTE</b><br>30 mm: <ul><li>Sierra circular</li><li>CNC Router</li></ul><br>5 mm: <ul><li>CNC Router</li><li>CNC Navaja</li><br><br><b>ADHESIVOS</b><br><ul><li>Pegamentos de contacto base solvente</li><li>Pegamentos Hot Melt</li><li>Pegamentos Epóxicos</li><li>Pegamentos PUR</li></ul><i>De menos a mayor adhesion</i>]]></string>
    <string name="fynocore_ppsb_description"><![CDATA[Paneles con núcleo honeycomb, laminado con 2 caras de polipropileno más <b>laminación de poliéster que garantiza y facilita la adhesión de otros sustratos al panel.</b><br><br><b>HERRAMIENTAS DE CORTE</b><br>30 mm: <ul><li>Sierra circular</li><li>CNC Router</li></ul>5 mm: <ul><li>CNC Router</li><li>CNC Navaja</li><b>ADHESIVOS</b><br><ul><li>Pegamentos de contacto base solvente</li><li>Pegamentos Hot Melt</li><li>Pegamentos Epóxicos</li><li>Pegamentos PUR</li></ul><i>De menos a mayor adhesion</i>]]></string>


    <string name="fynocore_terminations_description"><![CDATA[<b>Aplicación de vinilos</b><ul><li>Vinil Impreso</li><li>Vinil con textura</li></ul><b>Impresiones temporales</b><ul><li>Colores Sólidos</li><li>Gris</li></ul>]]></string>
    <string name="fynocore_ppsb_termination"><![CDATA[<b>VERSATILIDAD</b> para crear paneles con diferentes acabados de acuerdo a la aplicación deseada.<br><ul><li>Melamina</li><li>Fibra de Vidrio</li><li>Antiderrapante</li><li>Sustratos base textil</li><li>Chapas Naturales</li><li>Metal o Aluminio</li><li>Marmol o piedras naturales<li>FYNOSTONE</li></li><li>Resinas especiales para crear diseños 3D<li>Poliformas 3D</li></li><li>Aplicación directos como pastas texturizadas o pintura</li></ul>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_docs_template">%s</string>


</resources>
