<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    tools:context=".ui.description.DescriptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/activity_description_main_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/first_description_text"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_text_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_description_secondary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/second_description_text"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_text_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_description_main_text" />

        <TextView
            android:id="@+id/activity_description_first_element"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/first_description_element"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_element_size"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_description_secondary_text" />

        <TextView
            android:id="@+id/activity_description_second_element"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/second_description_element"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_element_size"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_description_first_element" />

        <TextView
            android:id="@+id/activity_description_third_element"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/third_description_element"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_element_size"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_description_second_element" />

        <TextView
            android:id="@+id/activity_description_third_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/third_description_text"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_text_size"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_description_third_element" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_description_touch_to_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/click_here_to_continue"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/description_text_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_description_third_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/activity_description_touch_trigger"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.constraintlayout.widget.ConstraintLayout>